--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="data_address">Data Alamat</string>
     <string name="save">SIMPAN</string>
     <string name="cancel">BATAL</string>
+    <string name="update">Update</string>
 </resources>
